--- a/extract_features.ipynb
+++ b/extract_features.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ec977872",
    "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
     "\n",
+    "import io\n",
     "import sys\n",
     "import os\n",
     "import os.path as op\n",
@@ -28,61 +29,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8e2a08ce",
+   "execution_count": 6,
+   "id": "30254100",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '\\ufeffTMSID,Series,Challenge,HasSes1EEG,HasSesXEEG,HasT1,HasT2,HasT3,HasT4,HasT1T2T3T4,HasT1T3,HasT1T2,FirstAvailEEG,TMSTypeSes1,TMSTypeSesX,HasOutcomes,HasSymptoms.Ses1,HasSymptoms.SesX'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_246240/2575907529.py\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdata_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'TRAINING'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfname_master\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_type\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'_Master List_All Series.csv'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmaster_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname_master\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/gpfs/data/brainstorm-ws/conda/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding, max_rows, like)\u001b[0m\n\u001b[1;32m   1161\u001b[0m                 \u001b[0;31m# Convert each value according to its column, then pack it\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1162\u001b[0m                 \u001b[0;31m# according to the dtype's nesting, and store it.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1163\u001b[0;31m                 \u001b[0mchunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpacker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconvert_row\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwords\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1164\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mchunk\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# The islice is empty, i.e. we're done.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1165\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/gpfs/data/brainstorm-ws/conda/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mconvert_row\u001b[0;34m(vals, _conv)\u001b[0m\n\u001b[1;32m   1140\u001b[0m             \u001b[0;31m# equal dtypes.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1141\u001b[0m             \u001b[0;32mdef\u001b[0m \u001b[0mconvert_row\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_conv\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconverters\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1142\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_conv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1143\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1144\u001b[0m             \u001b[0;32mdef\u001b[0m \u001b[0mconvert_row\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/gpfs/data/brainstorm-ws/conda/lib/python3.9/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36m_floatconv\u001b[0;34m(x)\u001b[0m\n\u001b[1;32m    723\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_floatconv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    724\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 725\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# The fastest path.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    726\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    727\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'0x'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# Don't accidentally convert \"a\" (\"0xa\") to 10.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: '\\ufeffTMSID,Series,Challenge,HasSes1EEG,HasSesXEEG,HasT1,HasT2,HasT3,HasT4,HasT1T2T3T4,HasT1T3,HasT1T2,FirstAvailEEG,TMSTypeSes1,TMSTypeSesX,HasOutcomes,HasSymptoms.Ses1,HasSymptoms.SesX'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# set data directory\n",
     "data_dir = '/gpfs/data/brainstorm-ws/data/'\n",
-    "data_type = 'TRAINING'\n",
-    "fname_master = op.join(data_dir, data_type, data_type + '_Master List_All Series.csv')\n",
-    "master_list = np.loadtxt(fname_master)\n"
+    "data_type = 'TRAINING'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "a541795f",
+   "execution_count": 7,
+   "id": "8e2a08ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['TRAINING_Item Level IDSSR Symptoms_Ses1_All Series.csv',\n",
-       " 'TRAINING_Master List_All Series.csv',\n",
-       " 'series_6',\n",
-       " 'series_2',\n",
-       " 'series_5',\n",
-       " 'series_4',\n",
-       " 'TRAINING_Demographics and Clinical Outcomes_All Series.csv',\n",
-       " 'TRAINING_Item Level IDSSR Symptoms_SesX_All Series.csv',\n",
-       " 'series_1',\n",
-       " 'series_7',\n",
-       " 'series_3']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "fnames"
+    "# read metadata from master list\n",
+    "fname_master = op.join(data_dir, data_type, data_type + '_Master List_All Series.csv')\n",
+    "master_keys = np.loadtxt(fname_master,  delimiter=',', max_rows=1, dtype=str)\n",
+    "master_keys[0] = 'TMSID'  # fix first key string\n",
+    "master_values = np.loadtxt(fname_master, delimiter=',', skiprows=1, dtype=str)\n",
+    "master_info = {key: master_values[:, master_keys == key].squeeze() for key in master_keys}\n",
+    "\n",
+    "# get subject IDs for datasets with both pre-/post-TMS EEG recordings\n",
+    "subj_select = master_info['HasT1T2'] == '1'\n",
+    "subj_ids = master_info['TMSID'][subj_select]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "0425f11f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read metadata from demographics and clinical outcomes\n",
+    "fname_outcomes = op.join(data_dir, data_type, data_type + '_Demographics and Clinical Outcomes_All Series.csv')\n",
+    "outcomes_keys = np.loadtxt(fname_outcomes,  delimiter=',', max_rows=1, dtype=str)\n",
+    "outcomes_keys[0] = 'TMSID'  # fix first key string\n",
+    "outcomes_values = np.loadtxt(fname_outcomes, delimiter=',', skiprows=1, dtype=str)\n",
+    "outcome_info = {key: outcomes_values[:, outcomes_keys == key].squeeze() for key in outcomes_keys}\n",
+    "\n",
+    "# get demographic and outcome data\n",
+    "subj_select = np.in1d(outcome_info['TMSID'], subj_ids)\n",
+    "subj_age = outcome_info['AgeTMSstart'][subj_select].astype(int)\n",
+    "subj_sex = outcome_info['Sex'][subj_select].astype(int)\n",
+    "subj_HSD = outcome_info['SevHxDep'][subj_select].astype(int)\n",
+    "subj_response = outcome_info['LastRespIDSSR'][subj_select].astype(int)\n",
+    "\n",
+    "# get series\n",
+    "subj_series = outcome_info['Series'][subj_select].astype(int)"
    ]
   },
   {
@@ -167,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
